--- a/Directory.Identity/Directory.Identity.API/appsettings.json
+++ b/Directory.Identity/Directory.Identity.API/appsettings.json
@@ -1,23 +1,111 @@
 {
-/*
-The following identity settings need to be configured
-before the project can be successfully executed.
-For more info see https://aka.ms/dotnet-template-ms-identity-platform
-*/
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "qualified.domain.name",
-    "TenantId": "22222222-2222-2222-2222-222222222222",
-    "ClientId": "11111111-1111-1111-11111111111111111",
-
-    "Scopes": "access_as_user",
-    "CallbackPath": "/signin-oidc"
+  "EventBusSettings":
+  {
+    "Host": "10.222.21.40",
+    "Username": "admin",
+    "Password": "Tera2018"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
+  "Logging":
+  {
+    "LogLevel":
+    {
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel":
+  {
+    "EndPoints":
+    {
+      "Http":
+      {
+        "Url": "http://0.0.0.0:5020"
+      }
+    }
+  },
+  "ConnectionStrings":
+  {
+    "DefaultConnection": "Server=10.222.21.58;Database=linkparadev;User Id=linkparadev;Password=nfUaF4TNhW!;MultipleActiveResultSets=true"
+  },
+  "ServiceEndpoints":
+  {
+    "Identity": "https://identity.lp.linktera.xyz"
+  },
+  "IdentitySettings":
+  {
+    "Password":
+    {
+      "RequiredLength": 6,
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireDigit": true,
+      "RequireNonAlphanumeric": false,
+      "RequiredPastPasswordCount": 3,
+      "PasswordExpiredDateInDays": 180
+    },
+    "Lockout":
+    {
+      "AllowedForNewUsers": true,
+      "DefaultLockoutTimeSpanInMinutes": 30,
+      "MaxFailedAccessAttempts": 5
+    },
+    "UserOptions":
+    {
+      "RequireUniqueEmail": true
+    },
+    "TokenSettings":
+    {
+      "TokenAuthenticationSettings":
+      {
+        "SecretKey": "LinkPara.SecretKey",
+        "Issuer": "LinkPara",
+        "Audience": "LinkPara.Audience",
+        "CookieName": "access_token"
+      },
+      "TokenExpiryDefaultMinute": 600
+    }
+  },
+  "PasswordValidation":
+  {
+    "RepetitiveRegexPattern": "([0-9])\\1{3}",
+    "SuccessiveRegexPattern": "(((012345)|(123456)|(234567)|(345678)|(456789))){1}",
+    "CurrentPasswordCharValues": "0123456789"
+  },
+  "RegisterRequirement":
+  {
+    "MinimumAgeLimit": "-13",
+    "MaximumAgeLimit": "-150"
+  },
+  "Serilog":
+  {
+    "MinimumLevel":
+    {
+      "Default": "Error",
+      "Override":
+      {
+        "Microsoft": "Error",
+        "Microsoft.Hosting.Lifetime": "Error"
+      }
+    },
+    "WriteTo":
+    [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args":
+        {
+          "nodeUris": "http://10.222.21.35:9200",
+          "indexFormat": "exception-logs-{0:yyyy.MM}",
+          "autoRegisterTemplate": true
+        }
+      }
+    ],
+    "Properties":
+    {
+      "ApplicationName": "Directory.Identity.API"
+    }
+  }
 }
