--- a/Directory.Identity/Directory.Identity.Domain/Directory.Identity.Domain.csproj
+++ b/Directory.Identity/Directory.Identity.Domain/Directory.Identity.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
 </Project>
